Automated Code Change
PiperOrigin-RevId: 609044129